tests/testcases/invalid/semantic/31_return_type_mismatch_numeric.ciel
// Error: return type mismatch (different numeric types)
int compute() {
    float x = 42.0;
    return x;  // Error: returning float, but function expects int
}

int main() {
    int result = compute();
    return 0;
}
